# pt_generate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
conf/: settings.yml
conf/testing/: dca.properties  indicators.properties  pairs.properties
src/: generate.py  http_api.py  settings.py
